--- a/hadoop-examples-mapreduce/pom.xml
+++ b/hadoop-examples-mapreduce/pom.xml
@@ -64,6 +64,12 @@
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>1.10.19</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
